crates/biome_cli/tests/snapshots/main_commands_lint/should_not_enable_all_recommended_rules.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint fix.js
```

## `biome.json`

```json
{
  "assist": {
    "enabled": false
  },
  "linter": {
    "enabled": true,
    "rules": {
      "recommended": false,
      "a11y": {},
      "complexity": {},
      "correctness": {},
      "performance": {},
      "security": {},
      "style": {},
      "suspicious": {}
    }
  }
}
```

## `fix.js`

```js

    		LOOP: for (const x of xs) {
    		    if (x > 0) {
    		        break;
    		    }
    		    f(x);
    		}
		
```

# Emitted Messages

```block
biome.json:5:13 deserialize  DEPRECATED  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The use of the recommended field has been deprecated, and will removed in the next major version of Biome. Use preset instead.
  
     3 │ 		"enabled": false
     4 │ 	},
   > 5 │ 		"linter": {
       │ 		          ^
   > 6 │ 		"enabled": true,
        ...
  > 15 │ 			"suspicious": {}
  > 16 │ 		}
  > 17 │ 	}
       │ 	^
    18 │ 	}
  
  i Migrate the configuration with the proper command
  
  $ biome migrate
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
```
